# alpaca-client

./: .gitignore  .tarpaulin.toml  Cargo.toml  Jenkinsfile  KubernetesBuilder.yaml  README.md
src/: account.rs  account_configuration.rs  asset.rs  auth.rs  bar.rs  calendar.rs  client.rs  clock.rs  last_quote.rs  last_trade.rs  lib.rs  order.rs  orders.rs  position.rs
tests/: account_configuration.rs  calendar.rs  client_orders.rs  client_position.rs  market_data.rs  serialization.rs
