[package]
name = "alpaca_client"
version = "0.1.0"
authors = ["Alexander Montgomery <evaderxander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.6.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0.110"
serde_json = "1.0.53"
chrono = { version = "0.4", features = ["serde"] }