[package]
name = "alpaca-client"
version = "0.1.1"
authors = ["Alexander Montgomery <alexandermontgomery95@gmail.com>"]
edition = "2018"
license = "MIT"
description = "This is a client for the alpaca.markets stock trading market."
keywords = ["alpaca", "financial", "stocks", "trading"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full", "macros"] }
rust_decimal = "1.6.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.110", features = ["derive"] }
openssl = { version = "0.10" }
openssl-probe = "0.1.2"
serde_json = "1.0.53"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
